add: 优化读取path内容